force-app/main/default/objects/Gate__c/Gate__c.object-meta.xml
<CustomObject>
    <label>Gate</label>
    <nameField>
        <displayFormat>GT-{000000}</displayFormat>
        <label>GATE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>