force-app/main/default/objects/Gate__c/fields/ClosingTime__c.field-meta.xml
<CustomField>
    <fullName>ClosingTime__c</fullName>
    <label>Closing Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeSlot</valueSetName>
    </valueSet>
</CustomField>