force-app/main/default/objects/Gate__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>GATE</relationshipLabel>
    <relationshipName>Gate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>