force-app/main/default/objects/Gate__c/fields/GateName__c.field-meta.xml
<CustomField>
    <fullName>GateName__c</fullName>
    <label>Gate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>