force-app/main/default/objects/Gate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GateName__c</columns>
    <columns>Facility__c</columns>
    <columns>OpeningTime__c</columns>
    <columns>ClosingTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>